--- a/style.css
+++ b/style.css
@@ -28,8 +28,10 @@
         color: #fff;
         text-align: center;
       }
-      .row-fluid-wrapper .row-depth-1 .row-number-4 {
-        background-color: #216d53;
-        padding: 0% 5%;
-        text-align: -webkit-center;
+      
+      row-fluid-wrapper row-depth-1row-number-4 {
+         background-color: #216d53;
+         padding: 0% 5%;
+         text-align: -webkit-center;
+ 
       }
