--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
         background-color: #216d53;
       }
       
-      form {
+      p form {
         position: relative;
         color: #fff;
         text-align: center;
