--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
          padding: 0% 5%;
          text-align: -webkit-center;
          color: white;
+         font-size: 4em;
             
       }
 
