--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
         text-align: center;
       }
 
-       p subtitulo {
+       p.subtitulo {
          background-color: #216d53;
          padding: 0% 5%;
          text-align: -webkit-center;
