--- a/style.css
+++ b/style.css
@@ -27,19 +27,28 @@
          padding-right: 10%;
       }
 
-      button # mauticform input_formularioebook_receber_material {
+      .mauticform-selectbox, .mauticform-input, .mauticform-textarea {
+         width: 100%;
+         padding: 0.5em 0.5em;
+         border: 1px solid #CCC;
+         background: #fff;
+         box-shadow: 0px 0px 0px #fff inset;
+         border-radius: 4px;
+         box-sizing: border-box;
+         color: #333;
+      }
+
+       button#mauticform_input_formularioebook_receber_material {
     color: #fff;
     background-color: #216d79;
     width: 100%;
     height: 50px;
     font-family: Roboto, Raleway, Open Sans, Sans serif;
-    box-shadow: 10px 10px 5px #888888;
-
-}
-
-      button# mauticform_input_formularioebook_receber_material: hover {
-    background-color: #215d59;
-    padding: 5%;
-    box-shadow: 10px 10px 5px #888888;
-
+   }
+       button#mauticform_input_formularioebook_receber_material:hover {
+    background-color: #A0204C;
+    padding: 2%;
+    text-transform: uppercase;
+    box-shadow: 1px 1px 1px 5px #a7a7a7;
+    line-height: middle;
 }
