--- a/style.css
+++ b/style.css
@@ -1,33 +1,65 @@
 
-      header {
-        position: relative;
-      }
-      
-      p form {
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Raleway:400,700|Roboto:400,700');
+
+header {
         position: relative;
       }
 
-       p .subtitulo {
+figure {
+        margin: 0;
+        text-align: -webkit-center;
+        /* height: 100px; */
+        padding: 2%;
+      }
+
+.description-text {
+        padding: 0% 10%;
+        text-align: -webkit-center;
+      }
+
+h1 {
+        text-align: justify;
+      }
+
+h2 {
+        text-align: justify;
+        font-size: 1.5em;
+      }
+
+h3#hs_cos_wrapper_module_1395941188224103_title {
+        font-size: 14px;
+        text-align: justify;
+        color: #fff;
+        padding: 10% 0% 0% 0%;
+      }
+      .mauticform-page-wrapper.mauticform-page-1 {
+        text-align: left;
+      }
+
+p form {
+        position: relative;
+      }
+
+p .subtitulo {
          background-color: #216d53;
          padding: 0% 5%;
          text-align: -webkit-center;
          color: white;
-         font-size: 4em;
-            
+         font-size: 4em;           
       }
 
-      box-form {
+box-form {
          background-color: #216d53;
          padding: 0% 5%;
          text-align: -webkit-center;
          border-radius: 25px;
  
       }
-      row-fluid-wrapper. row-depth-1. row-number-4 {
+row-fluid-wrapper. row-depth-1. row-number-4 {
          padding-right: 10%;
       }
 
-      .mauticform-selectbox, .mauticform-input, .mauticform-textarea {
+.mauticform-selectbox, .mauticform-input, .mauticform-textarea {
          width: 100%;
          padding: 0.5em 0.5em;
          border: 1px solid #CCC;
@@ -38,14 +70,15 @@
          color: #333;
       }
 
-       button#mauticform_input_formularioebook_receber_material {
+button#mauticform_input_formularioebook_receber_material {
     color: #fff;
     background-color: #216d79;
     width: 100%;
     height: 50px;
     font-family: Roboto, Raleway, Open Sans, Sans serif;
    }
-       button#mauticform_input_formularioebook_receber_material:hover {
+
+button#mauticform_input_formularioebook_receber_material:hover {
     background-color: #A0204C;
     padding: 2%;
     text-transform: uppercase;
